--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,9 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
+
 body {
   background-color: #e6f0fc;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: "Open Sans", sans-serif;
 }
