--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,7 @@
 @import url("https://fonts.googleapis.com/css2?family=Open+Sans&display=swap");
 
 body {
-  background-color: #e6f0fc;
+  background-color: #ffffff;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
