--- a/src/Layout/Header/Header.module.css
+++ b/src/Layout/Header/Header.module.css
@@ -1,3 +1,12 @@
 .headerImg {
-  width: 100%;
+  height: 100%;
+}
+.header {
+  background-color: white;
+  height: 109px;
+  overflow: hidden;
+  display: flex;
+  justify-content: center;
+  top: 0;
+  position: sticky;
 }
