--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -1,3 +1,29 @@
+.marginDiv {
+  background-color: #e6f0fc;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+}
+
+.introDiv {
+  padding: 40px 0px;
+  display: flex;
+  gap: 100px;
+  width: 1280px;
+}
+
+.introContentDiv {
+  width: 55%;
+}
+
 .header {
-  color: rgb(0, 0, 0);
+  margin: 0;
+  font-size: 48px;
+}
+.introImgDiv {
+  width: 45%;
+}
+
+.introImg {
+  width: 100%;
 }
