feat: grid section to edu page

--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -1,8 +1,8 @@
 .marginDiv {
-  background-color: #e6f0fc;
   width: 100%;
   display: flex;
   justify-content: center;
+  margin-bottom: 75px;
 }
 
 .introDiv {
@@ -28,4 +28,29 @@
 
 .introImg {
   width: 100%;
+}
+
+.introContentDiv {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.gridDiv {
+  margin-top: 50px;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: repeat(5);
+  gap: 40px;
+}
+
+.contentDiv {
+  width: 1280px;
+  display: flex;
+  flex-direction: column;
+}
+
+.H2HeaderDiv {
+  width: 100%;
+  text-align: center;
 }
