--- a/src/index.css
+++ b/src/index.css
@@ -7,3 +7,25 @@ body {
   box-sizing: border-box;
   font-family: "Open Sans", sans-serif;
 }
+
+h2 {
+  font-weight: 400;
+  line-height: 2.5 rem;
+  margin-bottom: 2.5 rem;
+  font-size: 32px;
+}
+
+h3 {
+  margin-bottom: 0.5rem;
+  font-size: 20px;
+  font-weight: 600;
+  line-height: 1.3;
+}
+
+img {
+  width: 100%;
+}
+
+p {
+  font-weight: 400;
+}
