--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -26,6 +26,18 @@
   border-top: none;
   padding: 20px;
   text-align: left;
+  transition: 0.25s;
+}
+
+.cardDiv:hover {
+  transform: scale(1.05);
+  cursor: pointer;
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
+}
+
+.cardDiv:active {
+  transform: scale(1.025);
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.075);
 }
 
 .schoolDiv {
