--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -19,7 +19,7 @@
 
 .cardDiv {
   background-color: white;
-  margin: 10px;
+  margin: 20px 10px;
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
   border: 1px solid rgba(14, 108, 241, 0.1);
@@ -27,6 +27,8 @@
   padding: 20px;
   text-align: left;
   transition: 0.25s;
+  margin-top: 20px;
+
 }
 
 .cardDiv:hover {
