--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -55,3 +55,21 @@
   text-align: center;
   margin-top: 50px;
 }
+
+
+
+.servicesGridDiv {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 400px 400px;
+}
+
+.servicesItemDiv {
+    background-color: white;
+  margin: 10px 10px;
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.05);
+  border-radius: 10px;
+  border: 1px solid rgba(14, 108, 241, 0.1);
+  border-top: none;
+  padding: 20px;
+}
