--- a/src/components/Slider/Slider.module.css
+++ b/src/components/Slider/Slider.module.css
@@ -27,14 +27,15 @@
   padding: 20px;
   text-align: left;
   transition: 0.25s;
-  margin-top: 20px;
 
 }
 
 .cardDiv:hover {
+
   transform: scale(1.05);
   cursor: pointer;
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
+  z-index: 200;
 }
 
 .cardDiv:active {
