--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -37,7 +37,7 @@
 }
 
 .gridDiv {
-  margin-top: 50px;
+  margin-top: 20px;
   display: grid;
   grid-template-columns: 1fr 1fr;
   grid-template-rows: repeat(5);
@@ -54,6 +54,7 @@
   width: 100%;
   text-align: center;
   margin-top: 50px;
+  margin-bottom: 50px;
 }
 
 
@@ -63,6 +64,8 @@
   grid-template-columns: 1fr 1fr;
   grid-template-rows: 400px 400px;
   gap: 20px;
+  margin: 20px 0px;
+  margin-bottom: 100px;
 }
 
 .servicesItemDiv {
