--- a/src/pages/ResourcesPage/ResourcesPage.module.css
+++ b/src/pages/ResourcesPage/ResourcesPage.module.css
@@ -81,6 +81,7 @@
   font-size: 1rem;
   color: #666;
   margin-top: 0.5rem;
+  margin-right: 7rem;
   line-height: 1.5;
 }
 
@@ -93,6 +94,7 @@
   cursor: pointer;
   padding: 0.5rem 0;
   text-decoration: none;
+  white-space: nowrap;
 }
 
 .articlesGrid {
@@ -111,6 +113,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  margin: 0 12px;
 }
 
 .articleCard:hover {
