--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -57,8 +57,6 @@
   margin-bottom: 50px;
 }
 
-
-
 .servicesGridDiv {
   display: grid;
   grid-template-columns: 1fr 1fr;
@@ -69,11 +67,17 @@
 }
 
 .servicesItemDiv {
-    background-color: white;
+  background-color: white;
   margin: 0x 10px;
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.05);
   border-radius: 10px;
   border: 1px solid rgba(14, 108, 241, 0.1);
   border-top: none;
   padding: 20px;
+}
+
+.servicesItemTitleDiv {
+  display: flex;
+  height: 70px;
+  justify-content: space-between;
 }
