--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -60,7 +60,7 @@
 .servicesGridDiv {
   display: grid;
   grid-template-columns: 1fr 1fr;
-  grid-template-rows: 400px 400px;
+
   gap: 20px;
   margin: 20px 0px;
   margin-bottom: 100px;
@@ -74,10 +74,24 @@
   border: 1px solid rgba(14, 108, 241, 0.1);
   border-top: none;
   padding: 20px;
+  transition: 0.25s;
+}
+
+.servicesItemDiv:hover {
+  transform: scale(1.03);
+  cursor: pointer;
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
+  z-index: 200;
+}
+
+.servicesItemDiv:active {
+  transform: scale(1.015);
+  box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.075);
 }
 
 .servicesItemTitleDiv {
   display: flex;
-  height: 70px;
+  height: 100px;
   justify-content: space-between;
+  gap: 100px;
 }
