--- a/src/pages/EducationPage/EducationPage.module.css
+++ b/src/pages/EducationPage/EducationPage.module.css
@@ -82,6 +82,7 @@
   cursor: pointer;
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
   z-index: 200;
+  text-decoration: none;
 }
 
 .servicesItemDiv:active {
@@ -94,4 +95,29 @@
   height: 100px;
   justify-content: space-between;
   gap: 100px;
+}
+
+.readMore{
+  color: #0e6cf1;
+  margin-top: 12px;
+  font-size: 14px;
+  position: relative;
+  line-height: 19px;
+  display: inline;
+}
+
+.servicesItemDiv:hover .readMore::after {
+  width: calc(100% - 17.5px);
+}
+
+.readMore::after {
+  content: "";
+  position: absolute;
+  z-index: 1000000;
+  bottom: 0;
+  left: 0;
+  width: 0%;
+  height: 1px; 
+  background-color: #0e6cf1;
+  transition: width 0.3s ease;
 }
