--- a/src/components/Modal/Modal.module.css
+++ b/src/components/Modal/Modal.module.css
@@ -4,8 +4,8 @@
   left: 0;
   right: 0;
   bottom: 0;
-  background-color: rgba(0, 0, 0, 0.2);
-  backdrop-filter: blur(10px);
+  background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(7px);
   display: flex;
   justify-content: center;
   align-items: center;
@@ -15,29 +15,79 @@
 
 .modal {
   background: white;
-  padding: 2rem;
-  border-radius: 10px;
-  max-width: 500px;
+  padding: 24px;
+  border-radius: 12px;
+  max-width: 600px;
   width: 90%;
   position: relative;
-  box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+  box-shadow: 0px 2px 10px rgba(0, 0, 0, 0.1);
   animation: scaleUp 0.25s ease;
+  border: 1px solid rgba(14, 108, 241, 0.1);
+  border-top: none;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 .closeButton {
   position: absolute;
-  top: 10px;
-  right: 15px;
+  top: 12px;
+  right: 16px;
   background: none;
   border: none;
-  font-size: 1.5rem;
+  font-size: 2rem;
   cursor: pointer;
   color: #333;
 }
 
-.content {
-  text-align: center;
+.header {
+  display: flex;
+  align-items: center;
+  gap:25px;
 }
+
+.header h2 {
+  margin: 0;
+  font-size: 1.5rem;
+}
+
+.header p {
+  margin: 4px 0 0;
+  font-size: 0.95rem;
+  color: #333;
+}
+
+.talkIcon {
+transform: scale(1.6);
+transform-origin: left bottom; 
+
+}
+
+.body {
+  font-size: 0.95rem;
+  line-height: 1.4;
+  color: #222;
+}
+
+.body ul {
+  padding-left: 1.2rem;
+  margin: 0.5rem 0;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.form input {
+  padding: 1rem 2rem;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1rem;
+}
+
+
 
 @keyframes fadeIn {
   from {
@@ -55,4 +105,27 @@
   to {
     transform: scale(1);
   }
+}
+
+
+.form button {
+  background-color: #0e6cf1;
+  border: 1px solid #0e6cf1;
+  color: white;
+  padding: 1rem 2rem;
+  border-radius: 4px;
+  font-size: 16px;
+  font-weight: 600;
+  width: inherit;
+}
+
+.form button:hover {
+  cursor: pointer;
+  border-color: #1a5ade;
+  background-color: #1a5ade;
+}
+
+.form button:active {
+  border-color: #4b91f5;
+  background-color: #4b91f5;
 }
