feat: footer for resources page

--- a/src/pages/ResourcesPage/ResourcesPage.module.css
+++ b/src/pages/ResourcesPage/ResourcesPage.module.css
@@ -1,6 +1,6 @@
 
 .marginDiv {
-  background-color: white;
+  background-color: #e6f0fc;
   width: 100%;
   display: flex;
   justify-content: center;
