--- a/src/pages/ResourcesPage/ResourcesPage.module.css
+++ b/src/pages/ResourcesPage/ResourcesPage.module.css
@@ -107,8 +107,8 @@
 }
 
 .articleCard {
-  background: white;
-  border: 1px solid #e9ecef;
+  
+  
   border-radius: 10px;
   padding: 20px;
   transition: 0.25s;
@@ -117,21 +117,21 @@
   flex-direction: column;
   justify-content: space-between;
   margin: 20px 10px;
-    box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.05);
-      border: 1px solid rgba(14, 108, 241, 0.1);
-  border-top: none;
+  box-shadow: 0px 2px 10px 2px rgba(103, 235, 255, 0.05);
+  border: 1px solid #e6f0fc;
+
 
 }
 
 .articleCard:hover {
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.1);
-  transform: scale(1.05);
+  transform: scale(1.04);
   cursor: pointer;
 
 }
 
 .articleCard:active {
-  transform: scale(1.025);
+  transform: scale(1.02);
   box-shadow: 0px 2px 10px 2px rgba(0, 0, 0, 0.075);
 }
 
